iPod connection assistant: rework iPod identification

This should fix remaining bugs where iPod is misidentified as a USB
stick. Long comments are added that clarify interaction of varous
code paths that deal with iPhone-like devices.

BUG: 263288
REVIEW: 102966
FIXED-IN: 2.5